[metadata]
name = FinLib
author = Xianba Xia
author-email = scuxia@gmail.com
summary = The most important libraries for financial engineering
description-file = README.md
license = Apache-2
classifier =
    Development Status :: 4 - Beta
        Environment :: Console
        Environment :: OpenStack
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python
keywords =
    setup
    distutils
[files]
packages =
data_files =
[entry_points]
console_scripts =
